tests/test-files/parse-cond.txt
================================================================================
100 Malformed cond expression
================================================================================

(package test-package)

(define x (cond))

--------------------------------------------------------------------------------

error: Malformed cond expression
  --> test:3:15
   |
 3 |  (define x (cond))
   |                 ^ expected one or more clauses

================================================================================
101 Malformed cond clause
================================================================================

(package test-package)

(define x (cond 1))

--------------------------------------------------------------------------------

error: Malformed cond clause
  --> test:3:16
   |
 3 |  (define x (cond 1))
   |                  ^ expected list

================================================================================
102 Malformed cond clause
================================================================================

(package test-package)

(define x (cond (1 2 . 3)))

--------------------------------------------------------------------------------

error: Malformed cond clause
  --> test:3:16
   |
 3 |  (define x (cond (1 2 . 3)))
   |                  ^^^^^^^^^ unexpected dotted list

================================================================================
103 Malformed function
================================================================================

(package test-package)

(define x (cond (y)))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:18
   |
 3 |  (define x (cond (y)))
   |                    ^ expected body
